[package]
author = "Matthew Scheffel <matt@dataheck.com>"
name = "annotation-translator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlua = "0.19.7"

[features]
calibre = []
koreader = ["dep:rlua"]
logseq = []